# mc

./: .dockerignore  .env.example  .gitignore  pyproject.toml
src/webcraft_api/: client.py  exceptions.py
src/webcraft_api/models/: common.py  enums.py  requests.py  responses.py
src/webcraft_api/services/: admin.py  api.py  banlist.py  base.py  chat.py  entities.py  items.py  ping.py  players.py  plugins.py  server.py  whitelist.py  worlds.py
