[project]
name = "mc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.ruff]
target-version = "py313"
output-format = "github"

[tool.ruff.lint]
exclude = ["__pycache__"]
